--- a/app/src/main/res/layout/editor_line_layout.xml
+++ b/app/src/main/res/layout/editor_line_layout.xml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:orientation="horizontal"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/label_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:paddingStart="5dp"
+        android:paddingLeft="5dp"
         android:textColor="#117755"
         android:text="label:"/>
 
@@ -15,9 +17,9 @@
         android:id="@+id/instruction_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingStart="40dp"
-        android:paddingLeft="40dp"
-        android:textSize="20sp"
+        android:paddingStart="30dp"
+        android:paddingLeft="30dp"
+        android:textSize="23sp"
         android:textColor="@android:color/black"
         android:text="INS 0 0"/>
 
@@ -25,6 +27,8 @@
         android:id="@+id/comment_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:paddingStart="20dp"
+        android:paddingLeft="20dp"
         android:text="comment text"/>
 
 
